--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Dominic St-Pierre
 description: Dominic St-Pierre's Blog
-url: http://dominicstpierre.net
+url: http://dstpierre.github.io
 markdown: redcarpet
 pygments: false
 safe: true
