--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 name: Dominic St-Pierre
 description: Dominic St-Pierre's Blog
+timezone: America/Montreal
+permalink: /:year/:month/:title.html
 url: http://dstpierre.github.io
 markdown: redcarpet
 pygments: false
 safe: true
-permalink: pretty
 author: Dominic St-Pierre
 email: dominicstpierre@gmail.com
