--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,10 @@ email: dominicstpierre@gmail.com
 highlighter: rouge
 paginate: 20
 paginate_path: "/blog/:num/"
+
+gems:
+  - jekyll-github-metadata
+  - jekyll-mentions
+  - jekyll-redirect-from
+  - jekyll-sitemap
+  - jemoji
