fixed an old url, added projects page and fixed layout of about and 404

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ highlighter: rouge
 paginate: 20
 paginate_path: "/blog/:num/"
 
+plugins:
+  - jekyll-redirect-from
+
 gems:
   - jekyll-github-metadata
   - jekyll-mentions
